# Process_Software_Agents

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  .sesskey  Claude.md  Dockerfile  Dockerfile.agents  Dockerfile.webui  ENDPOINT_BUG_ISSUE.md  FAILING_TESTS.md  PRD.md  PROJECT_STRUCTURE.md  PSPdoc.md  README.md  SETUP_BUGS_AND_FIXES.md  alembic.ini  bandit-report.json  debug_design_issues.py  docker-compose.webui.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  session20251119.6.md  setup_codespaces.sh  test_code_agent_minimal.py  test_code_agent_simple.py  test_debug_hang.py  test_improvement_report.md  test_json_parsing.py  test_minimal_e2e.py  test_minimal_pytest.py  test_orchestrator_simple.py  test_setup_codespaces.sh
.beads/: issues.jsonl
.claude/: settings.json
.claude/commands/: adr-status.md  coverage-analysis.md  session-summary.md
.devcontainer/: devcontainer.json
.github/workflows/: README.md  ci.yml  docs.yml  provider-e2e.yml  webui-e2e.yml
Summary/: 2025-11-19_test_gap_analysis.md  20251127.1.md  20251128.3.md  20251130.1.md  20251130.2.md  20251130.4.md  20251130.5.md  20251130.6.md  20251130.7.md  bootstrap_code_validation_setup.md  code_review_agent_implementation_progress.md  incident_20251114_session3_inefficient_execution.md  lessons_learned_20251202_test_isolation.md  lessons_learned_unit_test_antipatterns.md  monthly_reflection_november_december_2025.md  session_template.md  summary20241128.2.md  summary20251111.md  summary20251112.md  summary20251113.md  summary20251114.1.md  summary20251114.2.md  summary20251114.3.md  summary20251114.4.md  summary20251116.1.md  summary20251117.1.md  summary20251117.2.md  summary20251118.1.md  summary20251118.2.md  summary20251118.3.md  summary20251118.4.md  summary20251119.1.md  summary20251119.2.md  summary20251119.3.md  summary20251119.5.md  summary20251119.7.md  summary20251120.1.md  summary20251120.2.md  summary20251120.3.md  summary20251120.4.md  (+125 more)
Summary/Archive/: summary20251111.md  summary20251112.md  summary20251114.4.md  summary20251116.1.md  summary20251117.1.md  summary20251117.2.md  summary20251118.2.md  summary20251119.3.md  summary20251119.4.md  summary20251120.1.md  summary20251120.5.md  summary20251120.6.md  summary20251120.7.md  summary20251121.1.md  summary20251122.1.md  summary20251123.1.md  summary20251123.2.md  summary20251124.1.md  summary20251125.1.md  summary20251125.3.md  summary20251126.1.md  summary20251126.3.md  summary20251126.4.md  summary20251126.5.md  summary20251128.1.md  summary20251128.6.md  summary20251128.8.md  summary20251130.8.md  (+22 more)
benchmarks/: compare_versions.sh  conftest.py  run_benchmarks.py
contrib/nanogpt-tests/: __init__.py  conftest.py  pyproject.toml  test_model.py  test_nanogpt.ipynb
data/: bootstrap_analysis.md  bootstrap_design_review_results.json  bootstrap_results.json
database/: README.md
design/: ADR_002_commit_signing_in_test_repositories.md  ADR_003_opentelemetry_rl_triplet_instrumentation.md  ADR_004_process_graph_learning_from_execution.md  ADR_005_development_process_graph_learning.md  ADR_006_implementation_plan.md  ADR_006_repair_workflow_architecture.md  ADR_007_github_cli_integration.md  ADR_008_async_process_architecture.md  ADR_009_beads_planning_agent_integration.md  ADR_010_multi_llm_provider_support.md  ADR_011_claude_cli_agent_sdk_integration.md  ADR_011_implementation_plan.md  ADR_012_mcp_server_telemetry_hooks.md  ADR_013_logfire_telemetry_migration.md  ADR_014_web_ui_deprecation.md  ADR_015_wide_events_logging.md  ADR_016_documentation_process.md  HITL_GitHub_Workflow.als  HITL_QualityGate_Architecture.md  Local_PR_HITL_Architecture.md  containerized_user_profiles.md  hash_based_id_migration_analysis.md  multi_repo_workflow_implementation.md  telemetry_user_llm_tracking.md  testing_strategies.md
docs/: API_Reference.md  ASP_Overview.md  Agents_Reference.md  DOCUMENTATION_MAP.md  Developer_Guide.md  Getting_Started.md  HITL_Integration.md  KNOWLEDGE_BASE.md  adr_containerized_agent_execution.md  agent_output_format_decision.md  api_documentation.md  artifact_persistence_user_guide.md  artifact_persistence_version_control_decision.md  artifact_traceability_decision.md  asp_repository_workflow_implementation.md  avoiding_brittle_tests.md  bootstrap_data_collection_decision.md  code_generation_artifact_format_decision.md  code_review_agent_implementation_plan.md  coding_agent_user_guide.md  complexity_calibration_decision.md  comprehensive_agent_test_plan.md  data_storage_decision.md  database_schema_specification.md  design_agent_architecture_decision.md  design_agent_markdown_format.md  design_review_agent_architecture_decision.md  design_review_agent_user_guide.md  documentation_improvement_tracker.md  error_correction_feedback_loops_decision.md  external_repo_contribution_workflow.md  index.md  lessons_learned_session3_debugging.md  observability_platform_evaluation.md  orchestrator_internals_guide.md  phase_aware_feedback_revision_plan.md  planning_agent_architecture_decision.md  planning_agent_user_guide.md  postmortem_agent_user_guide.md  prompt_engineering_guide.md  (+22 more)
examples/: README.md  code_review_orchestrator_example.py  design_agent_example.py  design_review_agent_example.py  hello_world.py  hitl_workflow.py  planning_agent_example.py  rest_api_endpoint.py  telemetry_analysis.py  telemetry_example.py
notebooks/: ASP_External_Repo_Test.ipynb
scripts/: bootstrap_code_collection.py  bootstrap_data_collection.py  bootstrap_design_review_collection.py  cleanup_test_artifacts_repo.sh  init_database.py  init_test_artifacts_repo.sh  migrate_telemetry_db.py  query_telemetry.py  run_agent_tests.py  run_agent_tests.sh  run_e2e_pipeline.sh  run_health_check_task.py  test_single_task.py
src/: main.py
tests/: __init__.py  conftest.py  test_auth_api.py  test_jwt_utils.py  test_middleware_auth.py  test_password.py  test_quality_scores.yaml  test_task_model.py  test_tasks_api.py  test_user_model.py  test_web_ui.py
(+456 files in other folders)
