[project]
name = "asp-platform"
version = "0.1.0"
description = "Agentic Software Process (ASP) Platform - Multi-agent orchestration with PSP/TSP methodology"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ASP Platform Team"}
]
keywords = ["ai", "agents", "psp", "tsp", "software-process", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

# Core dependencies
dependencies = [
    "anthropic>=0.39.0",              # Claude API client
    "openai>=1.54.0",                 # OpenAI API client (for multi-provider support)
    "langfuse>=2.52.0",               # Observability platform (selected in evaluation)
    "pydantic>=2.9.0",                # Data validation and settings
    "pydantic-settings>=2.5.0",       # Environment-based configuration
    "python-dotenv>=1.0.0",           # .env file support
    "tenacity>=9.0.0",                # Retry logic for API calls
    "jinja2>=3.1.4",                  # Prompt template rendering
    "pyyaml>=6.0.2",                  # YAML configuration parsing
    "numpy>=2.1.0",                   # Numerical computing (PROBE-AI regression)
    "scipy>=1.14.0",                  # Scientific computing (regression, statistics)
    "pandas>=2.2.0",                  # Data analysis (bootstrap metrics)
]

# Optional dependency groups
[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.3.0",                  # Testing framework
    "pytest-cov>=6.0.0",              # Coverage reporting
    "pytest-asyncio>=0.24.0",         # Async test support
    "pytest-mock>=3.14.0",            # Mocking utilities
    "ruff>=0.7.0",                    # Linter and formatter
    "mypy>=1.13.0",                   # Static type checking
    "pre-commit>=4.0.0",              # Pre-commit hooks
    "ipython>=8.29.0",                # Enhanced REPL
    "ipdb>=0.13.13",                  # Debugger
]

# Database support (PostgreSQL/TimescaleDB hybrid)
database = [
    "psycopg[binary]>=3.2.0",         # PostgreSQL adapter
    "sqlalchemy>=2.0.35",             # ORM
    "alembic>=1.13.0",                # Database migrations
]

# Dashboard and visualization
dashboard = [
    "grafana-client>=4.1.0",          # Grafana API client
    "plotly>=5.24.0",                 # Interactive plotting
    "streamlit>=1.39.0",              # Dashboard framework (if building custom UI)
]

# All extras combined
all = [
    "asp-platform[dev,database,dashboard]",
]

# CLI entry points
[project.scripts]
asp = "asp.cli:main"
asp-migrate = "asp.database.migrate:main"
asp-bootstrap = "asp.bootstrap.dashboard:main"

[project.urls]
Homepage = "https://github.com/evelynmitchell/Process_Software_Agents"
Documentation = "https://github.com/evelynmitchell/Process_Software_Agents/tree/main/docs"
Repository = "https://github.com/evelynmitchell/Process_Software_Agents"
Issues = "https://github.com/evelynmitchell/Process_Software_Agents/issues"

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling configuration
[tool.hatch.build.targets.wheel]
packages = ["src/asp"]

# Ruff configuration (linter and formatter)
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without an explicit strict= parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101"]  # Allow unused args and asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langfuse.*",
    "anthropic.*",
    "scipy.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",                    # Show all test summary info
    "--strict-markers",       # Strict marker validation
    "--strict-config",        # Strict config validation
    "--cov=src/asp",          # Coverage for asp package
    "--cov-report=term-missing",  # Show missing lines in terminal
    "--cov-report=html",      # Generate HTML coverage report
    "--cov-fail-under=80",    # Require 80% coverage
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (moderate speed, test database)",
    "e2e: End-to-end tests (slow, full system with LLM calls)",
    "bootstrap: Tests for bootstrap learning framework",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/asp"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
