[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world-api"
version = "1.0.0"
description = "A simple Hello World REST API built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "ASP Code Agent", email = "agent@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy==2.0.44",
    "alembic==1.17.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.28.1",
    "requests==2.32.5",
    "python-dotenv==1.2.1",
    "python-dateutil==2.9.0.post0",
    "structlog==23.2.0",
    "rich==13.9.4",
    "langfuse",
    "logfire>=2.0.0",
    "anthropic",
    "tenacity",
    "python-fasthtml"
]

[project.optional-dependencies]
telemetry = [
    "logfire>=2.0.0",
    "opentelemetry-instrumentation-anthropic>=0.1.0",
    "opentelemetry-instrumentation-openai>=0.1.0",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "black[jupyter]>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "pre-commit>=3.6.0",
    "pytest-mock==3.12.0",
    "pdb-attach",
    "py-spy==0.3.14",
    "sphinx==7.2.6",
    "sphinx-rtd-theme==1.3.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "lxml>=6.0.2",
    # Advanced testing strategies (see design/testing_strategies.md)
    "allpairspy>=2.5.0",      # Pairwise/combination testing
    "hypothesis>=6.100.0",    # Property-based testing
    "mutmut>=2.4.0",          # Mutation testing
    "pyDOE2>=1.3.0",          # Design of Experiments
]

[project.urls]
Homepage = "https://github.com/evelynmitchell/Process_Software_Agents"
Repository = "https://github.com/evelynmitchell/Process_Software_Agents.git"
Issues = "https://github.com/evelynmitchell/Process_Software_Agents/issues"
Documentation = "https://github.com/evelynmitchell/Process_Software_Agents#readme"

[project.scripts]
asp-cli = "asp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | contrib
  | artifacts
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["contrib", ".venv", "artifacts"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["src/asp", "src/services"]
omit = [
    "tests/*",
    "venv/*",
    "*/venv/*",
    "*/site-packages/*",
    "examples/*",
    "scripts/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    "contrib",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "SIM117",  # nested with statements (sometimes clearer)
    "SIM102",  # nested if statements (sometimes clearer)
    "SIM108",  # ternary operator (not always clearer)
    "SIM103",  # return bool directly (not always clearer)
    "SIM118",  # use key in dict (sometimes clearer with .keys())
    "B904",  # raise from err (not critical for now)
    "B007",  # unused loop variable (use _ prefix)
    "B017",  # assert blind exception in tests
    "F841",  # unused variable (cleanup later)
    "ARG001",  # unused function argument
    "ARG002",  # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["ARG", "S101"]  # unused arguments and assert usage in tests
"src/asp/web/*.py" = ["F403", "F405"]  # star imports are standard for FastHTML
"examples/*.py" = ["ARG001", "F841", "B007"]  # examples may have unused vars for demonstration

[tool.ty]
# ty is Astral's Python type checker (extremely fast, written in Rust)
# Exclude directories that contain external/generated code

[tool.ty.src]
exclude = [
    "contrib/**",
    "artifacts/**",
]

[dependency-groups]
dev = [
    "lxml>=6.0.2",
    "pre-commit>=4.5.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ty>=0.0.2",
]
