[project]
name = "nanogpt"
version = "0.1.0"
description = "The simplest, fastest repository for training/finetuning medium-sized GPTs"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "transformers",
    "tiktoken",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["model", "train", "sample", "bench", "configurator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "data/*", "config/*", "*.ipynb", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
